Mon Oct 02 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.2.2

This release is primarily a documentation update:

* Added:
  - README sections:
    - "Supported SIMP releases"
    - "Running a build matrix"
    - "TODO > Box roles"
    - Detailed sub-steps for "TODO > Features > Vagrant box directory tree"
    - SIMP GitHub badges
  - Environment variable: `SIMP_PACKER_verbose=yes`
  - Travis CI stage: 'Puppet 5.5 (SIMP 6.3+)'
* Changed:
  - README/documentation cleanup:
    - Cleaned up project structure
    - Rewrote most of the "Usage" section
      - Merged `matrix.md` documentation
    - Minor clarifications throughout the document
  - Fixed redundant sudo bug in `templates/simp.json.template`
* Removed:
  - Top-level `metadata.json` file
  - `matrix.md` file


Mon Oct 01 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.2.1

* Changed:
  - Reverted bug in `useradd::securetty`
  - Fixed bug in `Vagrantfile.erb.erb`
  - Improved matrix `json=` handling
  - Updated matrix docs


Fri Sep 28 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.2.0

* Added:
  - Initial build matrix support
  - Rake tasks:
    - `rake simp:packer:matrix[]` (experimental)
      - Iterates through a matrix of conditions to run `simp_packer_test.sh`
    - `rake vagrant:publish:local[]`
      - Install vagrant box into a local directory tree
      - Generates versioned metadata
  - YARD support
* Changed:
  - Improved vagrant box tree logic and code documentation
  - Fixed broken SIMP 6.1.0 support
    - (SIMP-5350) Fixed el6/udev/eth1 VM cloning bug
    - (SIMP-4482) Added umask to 6.1.0 `simp bootstrap`
  - Fixed box name bug in `Vagrantfile.erb.erb`


Mon Sep 17 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.1.1

* Changed:
  - Fixed error in tftpboot erb in simpsetup.

Wed Aug 30 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.1.0

* Added:
  - Tests:
    - Shell scripts are linted by shellcheck.
    - Ruby code is linted by rubocop.