@@ -6,5 +6,4 @@ host_only_interface: 'eth1'
 # TODO: configure sipm-packer masters and clients to use DHCP (SIMP-5333)
 mac_address: 'aabbccaa0007'
 host_only_gateway: '192.168.101.1'
-# CentOS 6 takes a little longer to build
 big_sleep: "<wait10><wait10><wait10><wait10><wait10>"
